--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </div>
   </nav>
   <div class="container">
-    <h1><b>Ferrovia Reggio Emilia - Ciano d'Enza</b></h1>
-    <h2>Una ferrovia per tutti</h2>
+    <h1 align="center"><b>Ferrovia Reggio Emilia - Ciano d'Enza</b></h1>
+    <h2 align="center">Una ferrovia per tutti</h2>
     <p>La Reggio-Ciano è una tratta ferroviaria ad alta efficienza che si trova nei pressi di Reggio Emilia. Collega la Val d'Enza per una lunghezza totale di 26 km. <span>Tra i suoi primati è stata la prima tratta ferroviaria al mondo gestita da una cooperativa.<span></p>
     <div id="carosello" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
