--- a/mezzi.html
+++ b/mezzi.html
@@ -38,14 +38,10 @@
     </div>
   </nav>
   <div class="container">
+    <h1 align="center"><b>I nostri mezzi</b></h1>
+    <p>La Reggio-Ciano sfrutta le nuovissime motrici diesel ad alta velocità di ultima generazione che garantiscono un viaggio nel comfort e di raggiungere Ciano in una sola ora.</p>
     <div class="row">
-      <h1><b>I nostri mezzi</b><h1>
-    </div>
-    <div class="row">
-      <p>La Reggio-Ciano sfrutta le nuovissime motrici diesel ad alta velocità di ultima generazione che garantiscono un viaggio nel comfort e di raggiungere Ciano in una sola ora.</p>
-    </div>
-    <div class="row">
-      <div class="card" id="card1">
+      <div class="card" style="width: 45rem">
         <img src="https://css.trainspo.com/uploads/photos/1024/147-88865v1_20171214.jpg" alt="FIAT Aln.072" id="FIAT Aln.072" class="card-img-top">
         <div class="card-body">
           <table class="table" id="Table 1">
@@ -82,7 +78,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="card" id="card2">
+      <div class="card" style="width: 45rem">
         <img src="https://live.staticflickr.com/4202/34913861035_0088a297ca_b.jpg" alt="FIAT Aln.668" id="FIAT Aln.668" class="card-img-top">
         <div class="card-body">
           <table class="table" id="Table 2">
@@ -120,7 +116,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="card" id="card3">
+      <div class="card" style="width: 45rem">
         <img src="http://www.tplitalia.it/TPER/Ferrovia/ALn663-1016-1021/ALn6631021-1018-800.jpg" alt="FIAT Aln.663" id="FIAT Aln.663" class="card-img-top">
         <div class="card-body">
           <table class="table" id="Table 3">
